Revision history for App-Anchr

{{$NEXT}}
    - Remove `ordered` from all bbtools options

0.6.0 2018-03-12T07:34:02Z
    - `anchr template`
        - Support up to 3 Illumina libraries
        - Gzip pacbio.fasta
        - Add --xmx to set Java memory usage
        - Remove 9_statQuorum.sh
        - Use `fint` instead of `repair` in repair.sh when possible
        - Use merged pe.cor.fa.gz in spades, megahit and platanus
    - `anchr anchors`
        - Non-covered regions should be ignored
        - Add --keepedge
    - `anchr trim`
        - Add --prefix
        - Rename peaks.highpass to peaks
    - `anchr quorum`
        - Add --prefix
        - Clean quorum.tt2
        - Overwrite existing files
    - `anchr mergereads`
        - Dedupe merged reads
        - Add --prefixm and --prefixu
        - Move section of pe.cor.fa.gz to 2_mergereads.sh

0.5.12 2018-03-01T23:41:31Z
    - `anchr template`
        - Save sampled directories to 4_downSampling/ or 6_downSampling/
        - Save kunitigs and anchors generated from 4_downSampling/ to 4_kunitigs/ and 4_tadpole/
        - Save kunitigs and anchors generated from 6_downSampling/ to 6_kunitigs/ and 6_tadpole/
        - 2GS and pacbio need different values of GAP_COV
        - Add --fastqc and --kmergenie
    - Add --cutoff and --cutk to `anchr trim`
    - `touch` empty kunitigs.fasta in `anchr kunitigs`
    - Fill small holes near edges in `anchr anchors`

0.5.11 2018-02-26T13:37:48Z
    - `anchr anchors`
        - Histogram of per base coverages
        - Add histogram_percentile() to Common.pm
        - Use `samtools view -c` to count reads
    - `anchr template`
        - Add --sgastats
        - Add --splitp
        - Add --statp
        - Add --redoanchors
    - 7_mergeAnchors.sh
        - Redoing anchors when merging anchors is now optional
        - Remove sequences of Others contained by Anchors

0.5.10 2018-02-22T19:03:47Z
    - Add 8_spades_MR.sh to `anchr template`