@@ -329,49 +329,6 @@ sub transitive_reduction {
     return $count;
 }
 
-sub poa_consensus {
-    my $seq_refs = shift;
-
-    my $aln_prog = "poa";
-
-    # temp in and out
-    my $temp_in  = Path::Tiny->tempfile("seq_in_XXXXXXXX");
-    my $temp_out = Path::Tiny->tempfile("seq_out_XXXXXXXX");
-
-    # msa may change the order of sequences
-    my @indexes = 0 .. scalar( @{$seq_refs} - 1 );
-    {
-        my $fh = $temp_in->openw();
-        for my $i (@indexes) {
-            printf {$fh} ">seq_%d\n", $i;
-            printf {$fh} "%s\n",      $seq_refs->[$i];
-        }
-        close $fh;
-    }
-
-    my @args;
-    {
-        push @args, "-hb";
-        push @args, "-read_fasta " . $temp_in->absolute->stringify;
-        push @args, "-clustal " . $temp_out->absolute->stringify;
-        push @args, File::ShareDir::dist_file( 'App-Anchr', 'poa-blosum80.mat' );
-    }
-
-    my $cmd_line = join " ", ( $aln_prog, @args );
-    my $ok = IPC::Cmd::run( command => $cmd_line );
-
-    if ( !$ok ) {
-        Carp::confess("Calling [$aln_prog] failed\n");
-    }
-
-    my $consensus = join "", grep {/^CONSENS0/} $temp_out->lines( { chomp => 1, } );
-    $consensus =~ s/CONSENS0//g;
-    $consensus =~ s/\s//g;
-    $consensus =~ s/-//g;
-
-    return $consensus;
-}
-
 # https://metacpan.org/source/GSULLIVAN/String-LCSS-1.00/lib/String/LCSS.pm
 # `undef` is returned if the susbstring length is one char or less.
 # In scalar context, returns the substring.
