@@ -2,6 +2,7 @@ Revision history for App-Anchr
 
 {{$NEXT}}
     - Remove `ordered` from all bbtools options
+    - Move poa_consensus() to App::Fasops
 
 0.6.0 2018-03-12T07:34:02Z
     - `anchr template`
